# markov_chain

./: CMakeLists.txt  Makefile  Readme.org
data/: text1.txt  text2.txt
src/: CMakeLists.txt  random_english.cpp
